--- a/vue-upload/package.json
+++ b/vue-upload/package.json
@@ -5,13 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "bulma": "^0.9.4",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "ts-node": "^10.8.1",
+    "vue": "^3.2.13",
+    "vue-jest": "^5.0.0-alpha.10",
+    "vue-router": "^4.0.13",
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -20,7 +26,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^28.1.0",
+    "vitest": "^0.14.1"
   },
   "eslintConfig": {
     "root": true,
